--- a/WebApp/Views/Home/Menu.cshtml
+++ b/WebApp/Views/Home/Menu.cshtml
@@ -74,7 +74,7 @@
                                                     "https://upload.wikimedia.org/wikipedia/commons/1/14/No_Image_Available.jpg"
                                                     : $"/img/products/{food.ProductAvatar.ImagePath}")"
                                                      alt="Product Image"
-                                                     style="width: 80px;">
+                                             style="width: 80px; height:80px;">
                                                 <div class="w-100 d-flex flex-column text-start ps-4">
                                                     <h5 class="d-flex justify-content-between border-bottom pb-2">
                                                         <span>@food.Name</span>
@@ -109,7 +109,7 @@
                                                     "https://upload.wikimedia.org/wikipedia/commons/1/14/No_Image_Available.jpg"
                                                     : $"/img/products/{drink.ProductAvatar.ImagePath}")"
                                                      alt="Product Image"
-                                                     style="width: 80px;">
+                                             style="width: 80px;height:80px;">
                                                 <div class="w-100 d-flex flex-column text-start ps-4">
                                                     <h5 class="d-flex justify-content-between border-bottom pb-2">
                                                         <span>@drink.Name</span>
@@ -142,7 +142,7 @@
                                                     "https://upload.wikimedia.org/wikipedia/commons/1/14/No_Image_Available.jpg"
                                                     : $"/img/products/{combo.ProductAvatar.ImagePath}")"
                                                      alt="Product Image"
-                                                     style="width: 80px;">
+                                             style="width: 80px;height:80px;">
                                                 <div class="w-100 d-flex flex-column text-start ps-4">
                                                     <h5 class="d-flex justify-content-between border-bottom pb-2">
                                                         <span>@combo.Name</span>
