--- a/WebApp/Views/Customer/OrderHistory.cshtml
+++ b/WebApp/Views/Customer/OrderHistory.cshtml
@@ -103,8 +103,10 @@
                                                                 <div class="card-footer bg-white d-flex justify-content-between align-items-center">
                                                                     <span>Total: <strong class="text-danger">@(order.TotalPrice.ToString("C", new CultureInfo("vi-VN")))</strong></span>
                                                                     <div>
-                                                                        <a asp-action="CancelOrder" asp-route-id="@order.Id" class="btn btn-outline-danger btn-sm ms-2"
-                                                                        onclick="return confirm('Are you sure you want to cancel this order?')">Cancel Order</a>
+                                                                        <a href="javascript:void(0);" class="btn btn-outline-danger btn-sm ms-2"
+                                                                           onclick="confirmCancelOrder('@Url.Action("CancelOrder", new { orderId = order.Id })')">
+                                                                            Cancel Order
+                                                                        </a>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -117,7 +119,9 @@
                                                         <div class="empty-order-image mb-3">
                                                             <img src="https://static.vecteezy.com/system/resources/previews/014/814/239/non_2x/no-order-a-flat-rounded-icon-is-up-for-premium-use-vector.jpg" alt="Không có đơn hàng" width="120">
                                                         </div>
-                                                        <h5 class="text-secondary">Chưa có đơn hàng</h5>
+                                                        <h5 class="text-secondary">
+                                                            No orders yet
+                                                        </h5>
                                                     </div>
                                                 }
                                             </div>
@@ -179,7 +183,9 @@
                                                         <div class="empty-order-image mb-3">
                                                             <img src="https://static.vecteezy.com/system/resources/previews/014/814/239/non_2x/no-order-a-flat-rounded-icon-is-up-for-premium-use-vector.jpg" alt="Không có đơn hàng" width="120">
                                                         </div>
-                                                        <h5 class="text-secondary">Chưa có đơn hàng</h5>
+                                                        <h5 class="text-secondary">
+                                                            No orders yet
+                                                        </h5>
                                                     </div>
                                                 }
                                             </div>
@@ -237,7 +243,9 @@
                                                         <div class="empty-order-image mb-3">
                                                             <img src="https://static.vecteezy.com/system/resources/previews/014/814/239/non_2x/no-order-a-flat-rounded-icon-is-up-for-premium-use-vector.jpg" alt="Không có đơn hàng" width="120">
                                                         </div>
-                                                        <h5 class="text-secondary">Chưa có đơn hàng</h5>
+                                                        <h5 class="text-secondary">
+                                                            No orders yet
+                                                        </h5>
                                                     </div>
                                                 }
                                             </div>
@@ -253,3 +261,20 @@
         </div>
     </div>
 </div>
+<script>
+    function confirmCancelOrder(url) {
+        Swal.fire({
+            title: "Are you sure?",
+            text: "You won't be able to revert this!",
+            icon: "warning",
+            showCancelButton: true,
+            confirmButtonColor: "#3085d6",
+            cancelButtonColor: "#d33",
+            confirmButtonText: "Yes, cancel it!"
+        }).then((result) => {
+            if (result.isConfirmed) {
+                window.location.href = url; // Chuyển hướng đến URL hủy đơn
+            }
+        });
+    }
+</script>
