[QuangVV - 2024-03-31] Update Nav Bar

--- a/WebApp/Views/Shared/_AdminNavbar.cshtml
+++ b/WebApp/Views/Shared/_AdminNavbar.cshtml
@@ -28,7 +28,7 @@
                                 <a class="nav-link text-dark" asp-area="OrderList" asp-controller="Admin" asp-action="OrderList">Manager Order</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="AdminChat" asp-action="Index">Manager Message</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="AdminChat" asp-action="Index">Customer Support </a>
                             </li>
                         </ul>
                     </div>
