[QuangVV - 2024-03-31] Fix Bug

--- a/WebApp/Views/Home/ProductDetail.cshtml
+++ b/WebApp/Views/Home/ProductDetail.cshtml
@@ -200,7 +200,7 @@
                                                 <div class="review-images">
                                                     @foreach (var image in f.Images)
                                                     {
-                                                        <a class="venobox" data-gall="gallery01" data-fitview="true" href="/img/products/@image.ImagePath">
+                                                    <a class="venobox" data-gall="gallery01" data-fitview="true" href="/img/feedbacks/@image.ImagePath">
                                                             <img src="~/img/feedbacks/@image.ImagePath" alt="Review Image" />
                                                         </a>
                                                     }
