--- a/WebApp/Views/Shared/_Feedback.cshtml
+++ b/WebApp/Views/Shared/_Feedback.cshtml
@@ -7,7 +7,7 @@
         <div class="modal-content">
             <form asp-action="SubmitFeedBack" asp-controller="Customer" method="post" enctype="multipart/form-data">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="feedbackModalLabel">Đánh Giá Sản Phẩm</h5>
+                    <h5 class="modal-title" id="feedbackModalLabel">Feedback Product</h5>
                 </div>
                 <div class="d-flex justify-content-center align-items-center">
                     <div class="p-4 bg-light border rounded">
